--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Fitness-App</string>
+    <string name="app_name">Fitness App</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="button">Button</string>
+    <string name="signup">Signup</string>
+    <string name="email">Email</string>
 </resources>
